# Winnie

./: .gitignore  README.md  pyproject.toml  setup.py
tutorials/: winnie_tutorial_1_basics.ipynb  winnie_tutorial_2_forward_modeling.ipynb  winnie_tutorial_3_rdi_settings_and_theory.ipynb  winnie_tutorial_4_optimization_and_subtraction_zones.ipynb
tutorials/aumic_rdi_example/: aumic.vot
tutorials/aumic_rdi_example/coadded/: jw01184001001_03106_00001_nrcalong_calints.fits  jw01184001001_03106_00001_nrcalong_calints_psfmask.fits  jw01184001001_03107_00001_nrcalong_calints.fits  jw01184001001_03107_00001_nrcalong_calints_psfmask.fits  jw01184002001_03106_00001_nrcalong_calints.fits  jw01184002001_03106_00001_nrcalong_calints_psfmask.fits  jw01184002001_03107_00001_nrcalong_calints.fits  jw01184002001_03107_00001_nrcalong_calints_psfmask.fits  jw01184003001_03106_00001_nrcalong_calints.fits  jw01184003001_03106_00001_nrcalong_calints_psfmask.fits  jw01184003001_03107_00001_nrcalong_calints.fits  jw01184003001_03107_00001_nrcalong_calints_psfmask.fits  jw01184004001_03106_00001_nrcalong_calints.fits  jw01184004001_03106_00001_nrcalong_calints_psfmask.fits  jw01184004001_03107_00001_nrcalong_calints.fits  jw01184004001_03107_00001_nrcalong_calints_psfmask.fits  jw01184005001_03106_00001_nrcalong_calints.fits  jw01184005001_03106_00001_nrcalong_calints_psfmask.fits  jw01184005001_03107_00001_nrcalong_calints.fits  jw01184005001_03107_00001_nrcalong_calints_psfmask.fits  jw01184006001_03106_00001_nrcalong_calints.fits  jw01184006001_03106_00001_nrcalong_calints_psfmask.fits  jw01184006001_03107_00001_nrcalong_calints.fits  jw01184006001_03107_00001_nrcalong_calints_psfmask.fits  jw01184013001_03106_00001_nrcalong_calints.fits  jw01184013001_03106_00001_nrcalong_calints_psfmask.fits  jw01184013001_03107_00001_nrcalong_calints.fits  jw01184013001_03107_00001_nrcalong_calints_psfmask.fits  jw01184014001_03106_00001_nrcalong_calints.fits  jw01184014001_03106_00001_nrcalong_calints_psfmask.fits  jw01184014001_03107_00001_nrcalong_calints.fits  jw01184014001_03107_00001_nrcalong_calints_psfmask.fits
winnie/: __init__.py  convolution.py  deconvolution.py  plot.py  rdi.py  space.py  utils.py  winnie_mplstyle.mplstyle
